Fix (notebooks): rebase and resolving merge conflicts

--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -195,7 +195,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stopping http://localhost:8082\n",
       "Serving 'quant_linear_qcdq.onnx' at http://localhost:8082\n"
      ]
     },
@@ -214,7 +213,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f364699ae10>"
+       "<IPython.lib.display.IFrame at 0x7f3f99c86a10>"
       ]
      },
      "execution_count": 4,
@@ -314,7 +313,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stopping http://localhost:8083\n",
       "Serving 'quant_model_qcdq.onnx' at http://localhost:8083\n"
      ]
     },
@@ -333,7 +331,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f36459cae90>"
+       "<IPython.lib.display.IFrame at 0x7f3f99cdbc10>"
       ]
      },
      "execution_count": 6,
@@ -462,7 +460,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f36469b6b10>"
+       "<IPython.lib.display.IFrame at 0x7f3f99d0e1d0>"
       ]
      },
      "execution_count": 8,
@@ -802,7 +800,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3645a0e410>"
+       "<IPython.lib.display.IFrame at 0x7f3f99d17cd0>"
       ]
      },
      "execution_count": 10,
@@ -901,7 +899,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-15 08:44:36.021678676 [W:onnxruntime:, graph.cc:1283 Graph] Initializer linear.bias appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
+      "2024-02-23 10:25:22.761675759 [W:onnxruntime:, graph.cc:1283 Graph] Initializer linear.bias appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
      ]
     }
    ],
@@ -1027,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
