Feat (ONNX Export): add example for dynamic quantization to ONNX export

--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -912,6 +912,98 @@
     "\n",
     "Due to differences in how the computation is performed between Brevitas and ONNX Runtime, it might happen the two results are slightly different (since Brevitas uses a style closer to QCDQ, rather than operating between integers), thus we added a tolerance for off-by-1 errors."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export Dynamically Quantized Models to ONNX "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also export dynamically quantized models to ONNX, but there are some limitations. Supported exports include:\n",
+    "- Asymmetric quantization (and therefore *unsigned*)\n",
+    "- Min-max scaling\n",
+    "- Rounding to nearest\n",
+    "- Per tensor scaling\n",
+    "- Bit width set to 8\n",
+    "\n",
+    "Note that ONNX DynamicQuantizeLinear requires these specific requirements for quantizers. This is shown in the following example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from brevitas_examples.common.generative.quantizers import ShiftedUint8DynamicActPerTensorFloat\n",
+    "\n",
+    "IN_CH = 3\n",
+    "IMG_SIZE = 128\n",
+    "OUT_CH = 128\n",
+    "BATCH_SIZE = 1\n",
+    "\n",
+    "class Model(torch.nn.Module):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()\n",
+    "        self.linear = qnn.QuantLinear(IN_CH, OUT_CH, bias=True, weight_bit_width=8, input_quant=ShiftedUint8DynamicActPerTensorFloat)\n",
+    "        self.act = qnn.QuantReLU(input_quant=ShiftedUint8DynamicActPerTensorFloat)\n",
+    "    \n",
+    "    def forward(self, inp):\n",
+    "        inp = self.linear(inp)\n",
+    "        inp = self.act(inp)\n",
+    "        return inp\n",
+    "\n",
+    "inp = torch.randn(BATCH_SIZE, IN_CH)\n",
+    "model = Model() \n",
+    "model.eval()\n",
+    "path = 'dynamic_quant_model_qcdq.onnx'\n",
+    "\n",
+    "exported_model = export_onnx_qcdq(model, args=inp, export_path=path, opset_version=13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Serving 'dynamic_quant_model_qcdq.onnx' at http://localhost:8086\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"400\"\n",
+       "            src=\"http://localhost:8086/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7efe085d8ad0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_netron(\"dynamic_quant_model_qcdq.onnx\", 8086)"
+   ]
   }
  ],
  "metadata": {
