Feat: remove quant metadata from quantlayer

--- a/notebooks/03_anatomy_of_a_quantizer.ipynb
+++ b/notebooks/03_anatomy_of_a_quantizer.ipynb
@@ -775,7 +775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Indeed we can verify that `quant_weight_scale()` is equal to `weight.abs().max()`:"
+    "Indeed we can verify that `weight_quant.scale()` is equal to `weight.abs().max()`:"
    ]
   },
   {
@@ -792,7 +792,7 @@
     }
    ],
    "source": [
-    "assert_with_message((param_from_max_quant_conv.quant_weight_scale() == param_from_max_quant_conv.weight.abs().max()).item())"
+    "assert_with_message((param_from_max_quant_conv.weight_quant.scale() == param_from_max_quant_conv.weight.abs().max()).item())"
    ]
   },
   {
@@ -1024,7 +1024,7 @@
     }
    ],
    "source": [
-    "assert_with_message((quant_conv1.quant_weight_scale() == quant_conv2.quant_weight_scale()).item())"
+    "assert_with_message((quant_conv1.weight_quant.scale() == quant_conv2.weight_quant.scale()).item())"
    ]
   },
   {
@@ -1059,9 +1059,9 @@
     "            return module.weight.abs().mean()\n",
     "        \n",
     "quant_conv1 = QuantConv2d(3, 2, (3, 3), weight_quant=SharedParamFromMeanWeightQuantizer)\n",
-    "old_quant_conv1_scale = quant_conv1.quant_weight_scale()\n",
+    "old_quant_conv1_scale = quant_conv1.weight_quant.scale()\n",
     "quant_conv2 = QuantConv2d(3, 2, (3, 3), weight_quant=quant_conv1.weight_quant)\n",
-    "new_quant_conv1_scale = quant_conv1.quant_weight_scale()\n",
+    "new_quant_conv1_scale = quant_conv1.weight_quant.scale()\n",
     "\n",
     "assert_with_message(not (old_quant_conv1_scale == new_quant_conv1_scale).item())"
    ]
@@ -1080,7 +1080,7 @@
     }
    ],
    "source": [
-    "assert_with_message((new_quant_conv1_scale == quant_conv2.quant_weight_scale()).item())"
+    "assert_with_message((new_quant_conv1_scale == quant_conv2.weight_quant.scale()).item())"
    ]
   },
   {
@@ -1134,7 +1134,7 @@
     "quant_conv_w_init = QuantConv2d(3, 2, (3, 3), weight_quant=ParamFromMaxWeightQuantizer)\n",
     "torch.nn.init.uniform_(quant_conv_w_init.weight)\n",
     "\n",
-    "assert_with_message(not (quant_conv_w_init.weight.abs().max() == quant_conv_w_init.quant_weight_scale()).item())"
+    "assert_with_message(not (quant_conv_w_init.weight.abs().max() == quant_conv_w_init.weight_quant.scale()).item())"
    ]
   },
   {
@@ -1160,7 +1160,7 @@
    "source": [
     "quant_conv_w_init.weight_quant.init_tensor_quant()\n",
     "\n",
-    "assert_with_message((quant_conv_w_init.weight.abs().max() == quant_conv_w_init.quant_weight_scale()).item())"
+    "assert_with_message((quant_conv_w_init.weight.abs().max() == quant_conv_w_init.weight_quant.scale()).item())"
    ]
   },
   {
