--- a/notebooks/ONNX_export_tutorial.ipynb
+++ b/notebooks/ONNX_export_tutorial.ipynb
@@ -213,7 +213,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3f99c86a10>"
+       "<IPython.lib.display.IFrame at 0x7fca8c1e5490>"
       ]
      },
      "execution_count": 4,
@@ -331,7 +331,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3f99cdbc10>"
+       "<IPython.lib.display.IFrame at 0x7fcb9406a1d0>"
       ]
      },
      "execution_count": 6,
@@ -460,7 +460,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3f99d0e1d0>"
+       "<IPython.lib.display.IFrame at 0x7fca8c1ca910>"
       ]
      },
      "execution_count": 8,
@@ -800,7 +800,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3f99d17cd0>"
+       "<IPython.lib.display.IFrame at 0x7fca8c0db5d0>"
       ]
      },
      "execution_count": 10,
@@ -899,7 +899,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-23 10:25:22.761675759 [W:onnxruntime:, graph.cc:1283 Graph] Initializer linear.bias appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
+      "2024-02-28 05:24:47.878249895 [W:onnxruntime:, graph.cc:1283 Graph] Initializer linear.bias appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
      ]
     }
    ],
