--- a/notebooks/quantized_recurrent.ipynb
+++ b/notebooks/quantized_recurrent.ipynb
@@ -384,7 +384,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:310: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
+      "/scratch/fabian/brevitas/src/brevitas/nn/mixin/base.py:307: UserWarning: Defining your `__torch_function__` as a plain method is deprecated and will be an error in future, please define it as a classmethod. (Triggered internally at /opt/conda/conda-bld/pytorch_1699449183005/work/torch/csrc/utils/python_arg_parser.cpp:368.)\n",
       "  return torch.cat(outputs, dim=seq_dim)\n"
      ]
     },
@@ -956,7 +956,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f890148e810>"
+       "<IPython.lib.display.IFrame at 0x7faa79c37310>"
       ]
      },
      "execution_count": 19,
@@ -985,7 +985,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-23 10:27:00.040794086 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_93 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
+      "2024-02-28 05:30:11.212034979 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_93 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
      ]
     }
    ],
@@ -1055,7 +1055,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8900396c50>"
+       "<IPython.lib.display.IFrame at 0x7faa7ad26650>"
       ]
      },
      "execution_count": 22,
@@ -1084,7 +1084,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-23 10:27:07.452386300 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_87 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
+      "2024-02-28 05:30:18.857576114 [W:onnxruntime:, graph.cc:1283 Graph] Initializer onnx::LSTM_87 appears in graph inputs and will not be treated as constant value/weight. This may prevent some of the graph optimizations, like const folding. Move it out of graph inputs if there is no need to override it, by either re-generating the model with latest exporter/converter or with the tool onnxruntime/tools/python/remove_initializer_from_input.py.\n"
      ]
     }
    ],
@@ -1163,7 +1163,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f88fb660410>"
+       "<IPython.lib.display.IFrame at 0x7faab66e2150>"
       ]
      },
      "execution_count": 25,
@@ -1239,7 +1239,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f88fb661a50>"
+       "<IPython.lib.display.IFrame at 0x7faba0549390>"
       ]
      },
      "execution_count": 27,
@@ -1316,7 +1316,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f88fb3b4d50>"
+       "<IPython.lib.display.IFrame at 0x7faa79c34710>"
       ]
      },
      "execution_count": 29,
@@ -1394,7 +1394,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f88fb222190>"
+       "<IPython.lib.display.IFrame at 0x7faa78c8acd0>"
       ]
      },
      "execution_count": 31,
@@ -1472,7 +1472,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f88fb1a1250>"
+       "<IPython.lib.display.IFrame at 0x7faa78ab76d0>"
       ]
      },
      "execution_count": 33,
